--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,8 @@
   <!-- Add Firebase products that you want to use -->
   <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-firestore.js"></script>
+
+  <!-- <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-storage.js"></script> -->
   <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-database.js"></script>
   <script>
     // Your web app's Firebase configuration
